# Context-Dump

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  justfile  makefile
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  book.toml
docs/src/: SUMMARY.md  architecture.md  configuration.md  introduction.md  roadmap.md
docs/src/usage/: cli.md  tui.md
src/: cli.rs  engine.rs  lib.rs  main.rs  output_dispatcher.rs
src/adapters/: fs_reader.rs  mod.rs
src/adapters/fs_scanner/: core_scanner.rs  filters.rs  mod.rs  noise.rs  walker.rs
src/adapters/output/: json.rs  markdown.rs  mod.rs  text.rs  xml.rs
src/adapters/parsers/: archive_parser.rs  fallback.rs  mod.rs  notebook_parser.rs  office_parser.rs  pdf_parser.rs  text_parser.rs
src/adapters/parsers/docling/: bridge.rs  dto.rs  mod.rs  resolver.rs
src/core/: file.rs  mod.rs  tree.rs
src/core/config/: inference.rs  mod.rs  models.rs  persistence.rs
src/core/content/: context.rs  mod.rs  obfuscation.rs  pii.rs  tokens.rs
src/core/content/minifier/: factory.rs  mod.rs  strategies.rs
src/engine/: executor.rs  logging.rs  mod.rs  overrides.rs  processor.rs  remote.rs  summary.rs
src/ports/: mod.rs  reader.rs  writer.rs
src/ui/: mod.rs  node.rs  runner.rs  view.rs
src/ui/app/: config_ops.rs  core.rs  handler.rs  mod.rs  tree.rs
src/ui/app/handler/: mod.rs  navigation.rs  stats.rs
src/ui/view/: explorer.rs  mod.rs  panels.rs
tests/: cli_tests.rs  integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: cli.rs  cli_filters.rs  cli_stdout.rs  engine_flow.rs  mod.rs
tests/unit/: mod.rs
tests/unit/adapters/: depth.rs  filters.rs  filters_path.rs  noise.rs  noise_elite.rs  notebook.rs  office.rs  output.rs  parsers.rs  scanner.rs  scanner_links.rs
tests/unit/core/: config.rs  config_inference.rs  file_node.rs  persistence.rs  tokens.rs  tree.rs
