[package]
name = "context"
version = "0.2.0"
edition = "2021"
authors = ["Raul"]
description = "Context Engine Elite - Docling Powered"
readme = "README.md"
rust-version = "1.80"

[dependencies]
clap = { version = "4.5.56", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "2.0"
rayon = "1.10"
ignore = "0.4"
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] } 
arboard = "3.4"
indicatif = { version = "0.18.3", features = ["rayon"] }
dirs = "6.0"

# Core Parsers
regex = "1.10"

# TUI UI
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.12"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true