[package]
name = "context"
version = "2.0.1"
edition = "2021"
authors = ["Raúl Carrillo Vicente"]
description = "Native Context Engine for LLMs - High Performance & Portable"
readme = "README.md"
license = "MIT"
rust-version = "1.80"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "cargo"] }
anyhow = "1.0.102"
thiserror = "2.0"
rayon = "1.10"
ignore = "0.4"
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] } 
arboard = "3.4"
indicatif = { version = "0.18.4", features = ["rayon"] }
dirs = "6.0"
pdf-extract = "0.10.0"
calamine = "0.34.0"
zip = "8.4.0"
tiktoken-rs = "0.9.1"
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"
predicates = "3.1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true